JS/Counter/styles.css
@import url('https://fonts.googleapis.com/css2?family=Borel&family=Caprasimo&family=Montserrat:wght@100;300&display=swap');
.nav{
    position: sticky;
    display:flex;
    justify-content: center;
    
}
/*.Title{
    /* position: fixed;
    top:0;
    left: 44vw;
    display: flex;
    justify-content: center;
    font-family: caprasimo;
    /* height: 3px; */
   /* align-items: center;
    align-content: center;
    align-self: center;
    padding-top: 3px;
     */

.center{
    display: flex;
    justify-content: center;
    align-items: center;
}
.controls{
    display: flex;
    flex-direction: column;
    position: relative;
    /* position: ; */
}
main{
    height: 100%;
    display: flex;
    flex-direction: column;
}
#count{
    display: flex;
    justify-content: center;
    margin-bottom: 30px;
    font-weight: bolder;
    /* text-size-adjust: calc;
     */
     font-size: xx-large;
     box-shadow: 2px;
    border: solid 3px ;
    }
#count:hover{
    background-color:blue;
    color:white;
}
#RESET{
    margin-bottom: 10px;
}
#RESET:hover{
    background-color: red;
    color: white;
    border: solid 2px black;
    width: 150px;
    height: 50px;
}
#increase{
    margin-bottom: 10px;
}
#increase:hover{
    background-color: green;
    color: white;
    border: solid 2px black;
    width: 150px;
    height: 50px;
}
mark{
    color: yellow
}
#decrease:hover{
    background-color: orangered;
    color: white;
    border: solid 2px black;
    width: 150px;
    height: 50px;
}

